Revert "perf: use Contended annotation instead of manual padding"
This reverts commit 143bd9374d54823e308490b91442b477a3c1483a.