@@ -43,8 +43,6 @@
                         <!--can't use with release flag -->
                         <arg>--add-exports</arg>
                         <arg>java.base/jdk.internal.misc=ALL-UNNAMED</arg>
-                        <arg>--add-exports</arg>
-                        <arg>java.base/jdk.internal.vm.annotation=ALL-UNNAMED</arg>
                     </compilerArgs>
                 </configuration>
             </plugin>
